- Added system independent realpath() implementation which caches intermediate directories in realpath-cache - Fixed bug #45044 (relative paths not resolved correctly) - Fixed bug #43817 (opendir() fails on Windows directories with parent directory unaccessible). [DOC] The semantic of realpath() on BSD and Windows is changed. Now it should work exactly in the same way as on Linux (POSIX.1-2001)